--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500&amp;subset=cyrillic"
     rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../lesson/css/normalize.css">
-  <link rel="stylesheet" href="../lesson/css/fonts.css">
-  <link rel="stylesheet" href="../lesson/css/jquery.fancybox.min.css">
-  <link rel="stylesheet" href="../lesson/css/slick.css">
-  <link rel="stylesheet" href="../lesson/css/jquery.formstyler.css">
-  <link rel="stylesheet" href="../lesson/css/style.css">
-  <link rel="stylesheet" href="../lesson/css/media.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/fonts.css">
+  <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+  <link rel="stylesheet" href="css/slick.css">
+  <link rel="stylesheet" href="css/jquery.formstyler.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/media.css">
 </head>
 
 <body>
