--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <li><a href="#">Главная</a></li>
               <li><a href="#">Галерея</a></li>
               <li><a href="#">Блог</a></li>
-              <li><a href="#">Контакты</a></li>
+              <li><a href="#contact">Контакты</a></li>
             </ul>
           </nav>
         </div>
@@ -356,7 +356,7 @@
     </div>
   </section>
 
-  <footer class="footer">
+  <footer id="contact" class="footer">
     <div class="footer__content">
       <div class="container">
         <div class="footer__inner">
